--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
 
     <activemq-version>5.14.3</activemq-version>
     <artemis-version>2.0.0-SNAPSHOT</artemis-version>
+    <slf4j-version>1.7.13</slf4j-version>
+    <log4j-version>1.2.17</log4j-version>
 
     <!-- Test dependency versions -->
     <junit-version>4.12</junit-version>
@@ -82,6 +84,11 @@
         <artifactId>artemis-cli</artifactId>
         <version>${artemis-version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>artemis-openwire-protocol</artifactId>
+        <version>${artemis-version}</version>
+      </dependency>
 
       <!-- Test dependencies -->
       <dependency>
@@ -95,6 +102,21 @@
         <artifactId>mockito-core</artifactId>
         <version>${mockito-version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4j-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>${log4j-version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
