--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache.activemq</groupId>
-  <artifactId>activemq-cli-tools</artifactId>
+  <artifactId>activemq-cli-tools-parent</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -70,7 +70,14 @@
 
   <dependencyManagement>
     <dependencies>
-
+    
+      <!-- CLI Tools -->
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-kahadb-exporter</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      
       <!-- ActiveMQ -->
       <dependency>
         <groupId>org.apache.activemq</groupId>
