--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <activemq-version>5.14.4</activemq-version>
-    <artemis-version>2.0.0-SNAPSHOT</artemis-version>
+    <artemis-version>2.0.0</artemis-version>
     <slf4j-version>1.7.13</slf4j-version>
     <log4j-version>1.2.17</log4j-version>
 
