--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>org.apache</groupId>
@@ -27,7 +26,7 @@
 
   <groupId>org.apache.activemq</groupId>
   <artifactId>activemq-cli-tools-parent</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <name>ActiveMQ CLI Tools</name>
@@ -57,7 +56,7 @@
     <connection>scm:git:http://git-wip-us.apache.org/repos/asf/activemq-cli-tools.git</connection>
     <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/activemq-cli-tools.git</developerConnection>
     <url>https://git-wip-us.apache.org/repos/asf?p=activemq-cli-tools.git</url>
-    <tag>HEAD</tag>
+    <tag>0.1.0</tag>
   </scm>
   <issueManagement>
     <url>https://issues.apache.org/jira/browse/AMQCLI</url>
