--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <groupId>org.apache.activemq</groupId>
   <artifactId>activemq-cli-tools-parent</artifactId>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <name>ActiveMQ CLI Tools</name>
@@ -56,7 +56,7 @@
     <connection>scm:git:http://git-wip-us.apache.org/repos/asf/activemq-cli-tools.git</connection>
     <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/activemq-cli-tools.git</developerConnection>
     <url>https://git-wip-us.apache.org/repos/asf?p=activemq-cli-tools.git</url>
-    <tag>HEAD</tag>
+    <tag>0.1.0</tag>
   </scm>
   <issueManagement>
     <url>https://issues.apache.org/jira/browse/AMQCLI</url>
