--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.apache.activemq</groupId>
     <artifactId>activemq-cli-tools-parent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
